# systemM

./: README  stack.yaml  systemM.cabal
cli/: systemM.hs
src/Language/: Common.hs
src/Language/Common/: Parser.hs  Pretty.hs  PrimitiveValues.hs
src/Language/Lambda/: Core.hs  Parser.hs
src/Language/Materialization/: Core.hs  Interpreter.hs  Parser.hs  Quoter.hs
src/Language/Materialization/Interpreter/: Diagrams.hs
src/Language/Materialization/Interpreter/Diagrams/: Text.hs
src/Language/Materialization/Transforms/: AutoSync.hs
tests/: Test.hs
tests/Language/: Lambda.hs
tests/Language/Lambda/Parser/: Tests.hs
tests/Language/Materialization/: Tests.hs
tests/Language/Materialization/Interpreter/: Tests.hs
tests/Language/Materialization/Parser/: Tests.hs
tests/Language/Materialization/Typer/: Tests.hs
