name:                systemM
version:             0.1.0.0
synopsis:            System M, a Materialization Calculus
homepage:            https://github.com/sykora/systemM/
license:             GPL-3
author:              P.C. Shyamshankar
maintainer:          shyam@cs.jhu.edu
copyright:           2017 P.C. Shyamshankar
category:            Language
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/sykora/systemM/

library
  hs-source-dirs:      src
  exposed-modules:     Language.Common,
                       Language.Common.Parser,
                       Language.Common.Pretty,
                       Language.Lambda.Core,
                       Language.Lambda.Parser,
                       Language.Materialization.Core,
                       Language.Materialization.Parser
  build-depends:       base >= 4.7 && < 5,
                       megaparsec,
                       mtl,
                       pretty
  default-language:    Haskell2010

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Test.hs
  other-modules: Language.Lambda.Tests
                 Language.Lambda.Parser.Tests
                 Language.Materialization.Tests
                 Language.Materialization.Parser.Tests
  build-depends: base >= 4.7 && < 5,
                 megaparsec,
                 systemM,
                 tasty,
                 tasty-hunit
