name:                systemM
version:             0.1.0.0
synopsis:            System M, a Materialization Calculus
homepage:            https://github.com/sykora/systemM/
license:             GPL-3
author:              P.C. Shyamshankar
maintainer:          shyam@cs.jhu.edu
copyright:           2017 P.C. Shyamshankar
category:            Language
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/sykora/systemM/

library
  hs-source-dirs:      src
  exposed-modules:     Language.Common,
                       Language.Common.Parser,
                       Language.Common.Pretty,
                       Language.Common.PrimitiveValues,
                       Language.Lambda.Core,
                       Language.Lambda.Parser,
                       Language.Materialization.Core,
                       Language.Materialization.Interpreter,
                       Language.Materialization.Parser,
                       Language.Materialization.Transforms.AutoSync,
                       Language.Materialization.Quoter
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       errors,
                       megaparsec,
                       mtl,
                       pretty,
                       syb,
                       template-haskell
  default-language:    Haskell2010

executable systemM
  main-is: systemM.hs
  hs-source-dirs: cli
  build-depends: base >= 4.7 && < 5,
                 optparse-applicative,
                 systemM

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Test.hs
  other-modules: Language.Lambda.Tests
                 Language.Lambda.Parser.Tests
                 Language.Materialization.Interpreter.Tests
                 Language.Materialization.Parser.Tests
                 Language.Materialization.Tests
  build-depends: base >= 4.7 && < 5,
                 megaparsec,
                 systemM,
                 tasty,
                 tasty-hunit
